--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+Fourier/r7bthvstxw-1/*.png
+Fourier/r7bthvstxw-1/*.jpg
+Fourier/r7bthvstxw-1/*.jpeg
+Fourier/r7bthvstxw-1/*.gif
+Fourier/r7bthvstxw-1/*.bmp
+Fourier/r7bthvstxw-1/*.tiff
+Fourier/r7bthvstxw-1/*.svg
